tests/paczka2/big_fuzzy/59400073.err
Error in line 4: WbS A733 -1,8
Error in line 6: 3¥4 A472 151,6
Error in line 7: 8Z6wb7UKKm A472 59,0
Error in line 12: WbS A733 170,4
Error in line 25: A399 A433 69,1
Error in line 36: tr2D A399 79,9
Error in line 49: BIJI A433 37,4
Error in line 58: BIJI A399 10,9
Error in line 73: 8Z6wb7UKKm A472 -1,8
Error in line 64: 8Z6wb7UKKm A472 9,2
Error in line 78: 8Z6wb7UKKm A433 55,8
Error in line 80: 8Z6wb7UKKm A733 13,5
Error in line 89: 8Z6wb7UKKm A433 122,22
Error in line 77: BIJI A733 2,4
Error in line 98: 8Z6wb7UKKm A399 45,72
Error in line 100: tr2D A433 -2,4
Error in line 86: 8Z6wb7UKKm A433 41,7
Error in line 94: BIJI A399 10,6
Error in line 103: A399 A433 5,7
Error in line 105: BIJI A733 5,7
Error in line 102: WbS A472 86,4
Error in line 119: WbS A399 28,6
Error in line 124: WbS A433 93,5
Error in line 126: WbS A733 12,9
Error in line 113: 3M4 A733 395,5
Error in line 138: fBQts7OizNp A399 10,5
Error in line 145: fBQts7OizNp A733 5,6
Error in line 148: 8Z6wb7UKKm A433 37,1
Error in line 121: BIJI A472 188,8
Error in line 150: 8Z6wb7UKKm A472 20,5
Error in line 170: 3M4 A399 -1,9
Error in line 177: WbS A433 180,4
Error in line 163: 8Z6wb7UKKm A733 73,8
Error in line 183: WbS A399 8,8
Error in line 168: 3M4 A399 2,0
Error in line 190: A399 A433 92,6
Error in line 184: 8Z6wb7UKKm A472 86,4
Error in line 192: BIJI A433 8,4
Error in line 194: 8Z6wb7UKKm A733 75,3
Error in line 206: 8Z6wb7UKKm A399 52,7
Error in line 209: 8Z6wb7UKKm A433 75,8
Error in line 218: A399 A399 10,0
Error in line 220: WbS A433 16,5
Error in line 226: BIJI A733 35,2
Error in line 227: BIJI A399 28,8
Error in line 242: BIJI A472 69,5
